# fire-to-ice

./: .env  Cargo.toml  README.md
src/: config.rs  main.rs  schema.rs
src/consumer/: reader.rs
src/pipeline/: batcher.rs  mod.rs  transform.rs
src/sink/: iceberg_commit.rs  mod.rs  parquet_commit.rs  parquet_writer.rs
src/source/: firestore_listen.rs  mod.rs
