[package]
name = "fire-to-ice"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["env-filter"] }
serde = { version = "1", features=["derive"] }
serde_json = "1"

# Firestore source
firestore = "0.39"                 # high-level async client (listen)
futures = "0.3"

# Arrow/Parquet
arrow = "53"
arrow-array = "53"
parquet = { version = "53", features=["arrow"] }

# GCS object store
object_store = { version = "0.11", features=["gcp"] }

# Iceberg (official Rust)
iceberg = "0.7.0"

# CLI + config
clap = { version = "4", features=["derive"] }
dotenvy = "0.15"
chrono = "0.4.42"
uuid = { version = "1", features=["v4"] }

# Polars for data reading and analysis
polars = { version = "0.51", features=["lazy", "parquet", "temporal", "strings", "cloud", "gcp"] }
